--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,16 +1,16 @@
 server {
     listen 80;
-    index index.src-fpm index.html;
+    index index.php index.html;
     server_name localhost;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/html;
 
-    location ~ \.src-fpm$ {
+    location ~ \.php$ {
         try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.src-fpm)(/.+)$;
-        fastcgi_pass src-fpm:9000;
-        fastcgi_index index.src-fpm;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php:9000;
+        fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
